[project]
name = "coc-discord-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Pierre Garat",email = "garat@et.esiea.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "discord-py (>=2.7.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "coc_discord_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
